Changelog for GEMC
==================


4/21/16
 - fixed physics list to behaviour: if NO EM phys list is selected, then no EM phys is loaded.
   By default STD is loaded.

.. Note::
	4/18/16 gemc 2.3 released!

|



4/15/16
 - merging CTOF hit process changes from Cole Smith / Dan Carman

4/8/16
 - fixed option repetition bug
 - NO_FIELD repetitions set to zero

4/7/16
 - resetting option repetition if so directed
   if repe is 1, options can be accumulated from the gcard
 - defaulting SPREAD to phasespace, cos(theta) is flat, not theta, unless flag "flat" is given to the SPREAD option
 - better comments for SPREAD_P
 - fixes to luminosity theta spread

4/6/16
 - fixed bdx hit process warnings
 - dc smearing / inefficiency:
   * smearing parameters, including scale, in database
   * inefficiency function, including scale, in database
   * if a wire is inefficient, its index is negative

4/5/16
 - reading CCDB_CONNECTION env variable to connect various hit process routine
	to CCDB. This can be set to a mysqlite file. If env is not set, reverting to jlab server.


3/31/16
 - moved user actions initializations to ActionInitialization
 - added EVTN option to set event number

3/22/16
 - when background is being saved, all tracks passing by detectors
   are saved even if they do not deposit energy

3/21/16
 - adding verbosity to map field loading routines 

3/18/16
 - to physics catalogue:
 - hPairProd
 - ionIon
 - tInelastic
 - kaon-Inelastic
 - added notice in V(t) routine
 - implemented rayleigh scattering in the material properties, both mysql and text factories
 - fixed luminosity bug in setting number of particles
 - fixed luminosity bug in setting vertex spread properly

3/17/16
 - Modified time-walk functional to follow Haiyun's recommendation


3/11/16
 - removed unnecessary trueInfos instantiation in bst hit process

3/9/16
 - finalized background saving algorithm
 - saving time information of the track